cabal-version:      3.4
name:               web-server
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Avi Caspe
maintainer:         avi.caspe@gmail.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Web-Server
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:      base,
                        servant-server,
                        wai,
                        text,
                        directory,
                        time,
    hs-source-dirs:     src
    default-extensions: LambdaCase
    default-language:   Haskell2010
